--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <link href="css/font-awesome.min.css" rel="stylesheet">
 
         <link href="css/style.css" rel="stylesheet">
-        <link href='http://fonts.googleapis.com/css?family=Cinzel:400,900,700' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,700,700italic,600italic,600&amp;subset=latin,greek-ext,cyrillic-ext,greek,vietnamese,cyrillic' rel='stylesheet' type='text/css'>
+        <link href="//fonts.googleapis.com/css?family=Cinzel:400,900,700" rel="stylesheet" type="text/css">
+        <link href="//fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,700,700italic,600italic,600&amp;subset=latin,greek-ext,cyrillic-ext,greek,vietnamese,cyrillic" rel="stylesheet" type="text/css">
         <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
         <!--[if lt IE 9]>
-          <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+          <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
 
         <!-- Fav and touch icons -->
@@ -118,7 +118,7 @@
                              
                                 <div class="spacing40"></div>
                                 <ul class="team-social">
-                                    <li><a href="https://twitter.com/cybayashi" target="_blank" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a></li>
+                                   <!--  <li><a href="https://twitter.com/cybayashi" target="_blank" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a></li> -->
                                     <li><a href="http://stackoverflow.com/users/856498/yashua" target="_blank" title="Find me on Stack Overflow"><i class="fa  fa-stack-overflow"></i></a></li>
                                     <li><a href="https://github.com/cyberwombat" target="_blank" title="Find me on GitHub"><i class="fa  fa-github"></i></a></li>
 
@@ -310,8 +310,6 @@
     <!-- Placed at the end of the document so the pages load faster -->
 	<script type="text/javascript" src="js/modernizr.js"></script>
     <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=true"></script>
-    <script type="text/javascript" src="js/jquery.ui.map.js"></script>
     <script type="text/javascript" src="js/jquery.easing.js"></script>
     <script type="text/javascript" src="js/jquery.imagesloaded.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
