--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="for-sticky">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-4 col-xs-6 logo">
+                        <div class="col-md-4 col-xs-6">
                         	<a href="index.html" class="logo">Urban Lotus</a>
                         </div><!--/.logo-->
                         <div class="col-md-8 menu-box hidden-xs hidden-sm pull-right">
