--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
                         <div class="team-inner clearfix">
                             <div class="col-md-5">
                                 <div class="team-spacing"></div>
-                                <h3 class="small-title">Hi there, I'm Yashi.</h3>
+                                <h3 class="small-title">Hi there, I'm Yashua.</h3>
                                <!--  <p class="team-post">Web Entrepeneur</p> -->
-                              <p>I am a web developer with a penchant for pixel perfect design and cutting edge tech.</p>
+                              <p>I am a full stack web developer with a penchant for pixel perfect design and cutting edge tech.</p>
                                 <p>I thrive on co-creating and exploring potential ideas and helping people implement them whether through consultation or direct involvement.</p>
                              
                                 <div class="spacing40"></div>
